--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Children''s poetry'
 - !lcsh 'Children''s stories'
 - !lcc 'PZ'
+- GITenberg
 title: A Present for Infants; or, Pictures for the Nursery
 url: http://www.gutenberg.org/ebooks/43645
